Fix audio seeking New method fetchCurrentSongUrl to fetch the currently selected song, return it as a blob wrapped in a URL Object and cache it in state, so it can be used as src in the audio element .

--- a/src/components/AudioRow.css
+++ b/src/components/AudioRow.css
@@ -98,11 +98,10 @@ audio::-ms-media-controls-panel {
 }
 
 #progress {
-  appearance: none;
+  /* appearance: none; */
   width: 100%;
   height: 6px;
-  background: #b078ff;
+  /* background: #b89ae2a1; */
   border-radius: 4px;
   cursor: pointer;
-  
 }
